# plastic_waste_ml_eng

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt  settings.yaml
.github/workflows/: main.yml
bsort/: __init__.py  cli.py  config.py  infer.py  train.py
bsort/utils/: __init__.py  visualization.py
scripts/: prepare_data.py
tests/: __init__.py  test_autolabel.py  test_config.py  test_utils.py
